--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "build:watch": "tsc --watch -p tsconfig.json",
-    "clean": "rm -rf dist/*",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rm -rf dist/* typings/*",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -20,10 +20,19 @@
   },
   "homepage": "https://github.com/javierpassan/selene-phase-domain#readme",
   "dependencies": {
+    "dayjs": "1.11.7",
+    "lodash": "4.17.21",
     "mongodb": "4.13.0",
+    "suncalc": "1.9.0",
     "telegraf": "4.11.2"
   },
   "devDependencies": {
+    "@types/jest": "29.2.5",
+    "@types/lodash": "^4.14.191",
+    "@types/node": "18.11.18",
+    "@types/suncalc": "1.9.0",
+    "jest": "29.3.1",
+    "ts-jest": "29.0.3",
     "tsc": "2.0.4",
     "typescript": "4.9.4"
   },
